--- a/routes.html
+++ b/routes.html
@@ -67,6 +67,7 @@
         formularioNivel1.nombreUserNivel1.value = document.getElementById("user").innerText;
         enfocarCampo('nombreNivel1');
         cargarPaiseFormN1();
+        cargarAfiliadosFormN1();
         break
       case "formN2":
         ocultarElemento("false", "formularioNivel2");
